fix(#4): align the menu properly

--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -39,6 +39,7 @@
       position: fixed
       left: 0
       right: 0
+      bottom: calc(var(--macro-size) + 2px)
 
 
   #hotbar-directory-controls
